fixed overflow bug in small screen

--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -7,6 +7,21 @@
 	opacity: 0;
 }
 
+/* ! ACTIVE NAVLINK */
+
+.firstHalf .active li {
+	color: #fff;
+}
+
+.firstHalf .active div {
+	opacity: 1;
+	transform: scale(1);
+}
+
+.secondHalf .activeNavLink li {
+	background-color: #4f4f4f;
+}
+
 .navlink:hover .bottomLine {
 	transform: scale(1);
 	opacity: 1;
@@ -36,12 +51,6 @@
 
 .searchWrapper {
 	border: 1px solid transparent;
-}
-
-@media screen and (min-width: 1200px) {
-	.searchWrapper {
-		border-color: #82828299;
-	}
 }
 
 .searchWrapper.focus-within {
@@ -101,6 +110,12 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .top-searches .topSearchMovieList .movieCard:hover .cardPopUp {
 	display: none;
+}
+
+@media screen and (min-width: 1200px) {
+	.searchWrapper {
+		border-color: #82828299;
+	}
 }
 
 @media screen and (min-width: 2100px) {
